# xpa-multiline

./: .gitignore  pyproject.toml  start.py
src/handler/: excel.py
src/ui/: mainWidget.py  mainWidget.ui  tableItemWidget.py  tableWidget.py
src/widget/: main.py
tool/: uic.py
